--- a/app/src/main/res/layout/empty_state.xml
+++ b/app/src/main/res/layout/empty_state.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/baseline_warning_24" />
 
     <TextView
-        android:id="@+id/tv_empty_info"
+        android:id="@+id/tv_empty_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
