--- a/app/src/main/res/layout/list_events.xml
+++ b/app/src/main/res/layout/list_events.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_events"
+    android:id="@+id/fl_events"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="MergeRootFrame">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -43,6 +44,7 @@
         <include
             android:id="@+id/empty_state_container"
             layout="@layout/empty_state" />
+
         <include
             android:id="@+id/error_state_container"
             layout="@layout/error_state" />
