--- a/app/src/main/res/layout/list_events_card.xml
+++ b/app/src/main/res/layout/list_events_card.xml
@@ -2,16 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_events_card"
+    android:id="@+id/fl_events_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="MergeRootFrame">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.core.widget.NestedScrollView
-            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,6 +54,7 @@
         <include
             android:id="@+id/empty_state_container"
             layout="@layout/empty_state" />
+
         <include
             android:id="@+id/error_state_container"
             layout="@layout/error_state" />
