--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,42 +21,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/iv_user_profile"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="16dp"
-                    android:contentDescription="@string/user_profile"
-                    android:src="@drawable/dicoding_logo"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_greeting"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:text="@string/halo"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toEndOf="@+id/iv_user_profile"
-                    app:layout_constraintTop_toTopOf="@+id/iv_user_profile" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/coders"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile"
-                    app:layout_constraintStart_toEndOf="@+id/iv_user_profile"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
-                    app:layout_constraintVertical_bias="1.0" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -74,7 +39,7 @@
                 android:textSize="20sp" />
 
             <include
-                android:id="@+id/include_list_events_card"
+                android:id="@+id/include_list_events_card_horizontal"
                 layout="@layout/list_events_card" />
 
             <TextView
@@ -85,8 +50,8 @@
                 android:textSize="20sp" />
 
             <include
-                android:id="@+id/include_list_events"
-                layout="@layout/list_events" />
+                android:id="@+id/include_list_events_card_vertical"
+                layout="@layout/list_events_card" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
