--- a/app/src/main/res/layout/list_events.xml
+++ b/app/src/main/res/layout/list_events.xml
@@ -43,11 +43,19 @@
 
         <include
             android:id="@+id/empty_state_container"
-            layout="@layout/empty_state" />
+            layout="@layout/state_empty"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <include
             android:id="@+id/error_state_container"
-            layout="@layout/error_state" />
+            layout="@layout/state_error"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
