--- a/app/src/main/res/layout/list_events_card.xml
+++ b/app/src/main/res/layout/list_events_card.xml
@@ -11,26 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.core.widget.NestedScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_events_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:elevation="0dp"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_events_card"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:elevation="0dp"
-                android:paddingStart="0dp"
-                android:paddingEnd="0dp">
-
-            </androidx.recyclerview.widget.RecyclerView>
-        </androidx.core.widget.NestedScrollView>
+        </androidx.recyclerview.widget.RecyclerView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,11 +47,11 @@
 
         <include
             android:id="@+id/empty_state_container"
-            layout="@layout/empty_state" />
+            layout="@layout/state_empty" />
 
         <include
             android:id="@+id/error_state_container"
-            layout="@layout/error_state" />
+            layout="@layout/state_error" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
