--- a/app/src/main/res/layout/activity_main_navigation.xml
+++ b/app/src/main/res/layout/activity_main_navigation.xml
@@ -9,10 +9,11 @@
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/md_theme_primary"
+        android:background="@color/md_theme_onPrimary"
         android:backgroundTintMode="add"
+        android:fadingEdge="horizontal|vertical"
         android:foregroundTint="@color/md_theme_primary"
-        android:foregroundTintMode="add"
+        android:foregroundTintMode="src_in"
         app:backgroundTint="@color/md_theme_onPrimary"
         app:itemIconTint="@color/md_theme_primary"
         app:itemTextColor="@color/md_theme_primary"
@@ -34,5 +35,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="?attr/colorPrimary"-->
+<!--        android:elevation="4dp"-->
+<!--        android:title="My Custom Toolbar"-->
+<!--        android:titleTextColor="@android:color/white"/>-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
