--- a/app/src/main/res/layout/event_card_item.xml
+++ b/app/src/main/res/layout/event_card_item.xml
@@ -10,7 +10,7 @@
     android:layout_marginBottom="8dp"
     android:elevation="0dp"
     android:outlineProvider="none"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/md_theme_onPrimary"
     app:cardCornerRadius="20dp"
     app:cardElevation="0dp"
     app:cardMaxElevation="0dp"
@@ -62,12 +62,12 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_event_image" />
 
         <TextView
-            android:id="@+id/tv_event_card_participant"
+            android:id="@+id/tv_eventParticipant"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Event Participant"
+            android:text="@string/event_participant"
             android:textColor="@color/md_theme_tertiary"
             android:textColorLink="@color/md_theme_tertiary"
             android:textSize="14sp"
