--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -31,7 +31,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:text="@string/event_name"
                     android:textSize="28sp"
@@ -79,7 +79,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_event_name2" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/bt_event_register"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -87,6 +87,8 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
                     android:text="@string/register_event"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -112,10 +114,10 @@
                         android:layout_marginEnd="3dp"
                         android:clickable="false"
                         android:text="@string/event_status"
-                        android:textColor="@color/ic_launcher_background"
+                        android:textColor="@color/md_theme_primary"
                         android:textSize="14sp"
                         app:backgroundTint="@android:color/transparent"
-                        app:strokeColor="@color/ic_launcher_background"
+                        app:strokeColor="@color/md_theme_primary"
                         app:strokeWidth="2dp" />
 
                     <com.google.android.material.button.MaterialButton
@@ -126,10 +128,10 @@
                         android:layout_marginEnd="3dp"
                         android:clickable="false"
                         android:text="@string/event_slots"
-                        android:textColor="@color/ic_launcher_background"
+                        android:textColor="@color/md_theme_primary"
                         android:textSize="14sp"
                         app:backgroundTint="@android:color/transparent"
-                        app:strokeColor="@color/ic_launcher_background"
+                        app:strokeColor="@color/md_theme_primary"
                         app:strokeWidth="2dp" />
 
                 </LinearLayout>
@@ -306,6 +308,20 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab_favorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="16dp"
+                    android:clickable="true"
+                    android:contentDescription="@string/event_name"
+                    android:focusable="true"
+                    android:src="@drawable/baseline_favorite_border_24"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_event_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_event_media_cover" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
