--- a/app/src/main/res/layout/list_events_card.xml
+++ b/app/src/main/res/layout/list_events_card.xml
@@ -2,7 +2,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fl_events_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MergeRootFrame">
@@ -33,8 +32,8 @@
         android:layout_height="match_parent">
 
         <ProgressBar
-            android:id="@+id/loading_indicator_events_card"
             style="?android:attr/progressBarStyle"
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateOnly="true"
