--- a/app/src/main/res/layout/state_empty.xml
+++ b/app/src/main/res/layout/state_empty.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tv_body_empty"
         android:layout_width="253dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:text="It looks like there’s nothing here at the moment. Try checking back later!"
+        android:text="@string/it_looks_like_there_s_nothing_here_at_the_moment_try_checking_back_later"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -25,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Oops, Nothing Found"
+        android:text="@string/oops_nothing_found"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
