--- a/app/src/main/res/layout/state_error.xml
+++ b/app/src/main/res/layout/state_error.xml
@@ -29,14 +29,13 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_error_image" />
 
     <TextView
-        android:id="@+id/tv_body_error"
         android:layout_width="253dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:text="Something went wrong while processing your request. Please try again later."
+        android:text="@string/something_went_wrong_while_processing_your_request_please_try_again_later"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
